P01/force-app/main/default/objects/ProductTJ__c/ProductTJ__c.object-meta.xml
<CustomObject>
    <description>my custom product object</description>
    <label>T&amp;J Product</label>
    <nameField>
        <displayFormat>PR-{0000}</displayFormat>
        <label>Product SKU</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>T&amp;J Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>