P01/force-app/main/default/objects/ProductTJ__c/fields/Carat__c.field-meta.xml
<CustomField>
    <fullName>Carat__c</fullName>
    <label>Carat</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>