P01/force-app/main/default/objects/ProductTJ__c/fields/Product_Style__c.field-meta.xml
<CustomField>
    <fullName>Product_Style__c</fullName>
    <label>Product Style</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Product_Style</valueSetName>
    </valueSet>
</CustomField>