P01/force-app/main/default/objects/ProductTJ__c/fields/Retail_Price1__c.field-meta.xml
<CustomField>
    <fullName>Retail_Price1__c</fullName>
    <label>Retail Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>