P01/force-app/main/default/objects/ProductTJ__c/recordTypes/Diamonds_Collection.recordType-meta.xml
<RecordType>
    <fullName>Diamonds_Collection</fullName>
    <active>true</active>
    <label>Diamonds Collection</label>
</RecordType>