P01/force-app/main/default/objects/ProductTJ__c/recordTypes/Gold_Silver_Collection.recordType-meta.xml
<RecordType>
    <fullName>Gold_Silver_Collection</fullName>
    <active>true</active>
    <label>Gold &amp; Silver Collection</label>
</RecordType>