P01/force-app/main/default/objects/ProductTJ__c/validationRules/Retail_Price_Empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Retail_Price_Empty</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Retail_Price1__c )</errorConditionFormula>
    <errorMessage>Please Enter Retail Price</errorMessage>
</ValidationRule>